--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "api azure",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha",
+    "start": "node app.js"
   },
   "author": "Adrian Rodriguez",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "mocha": "^7.1.0",
     "mssql": "^6.1.0"
   }
 }
